# blas-hs

./: .gitignore  .travis.yml  Blas-Generic-Safe.html  Blas-Generic-Unsafe.html  Blas-Primitive-Safe.html  Blas-Primitive-Types.html  Blas-Primitive-Unsafe.html  Blas-Specialized-ComplexDouble-Safe.html  Blas-Specialized-ComplexDouble-Unsafe.html  Blas-Specialized-ComplexFloat-Safe.html  Blas-Specialized-ComplexFloat-Unsafe.html  Blas-Specialized-Double-Safe.html  Blas-Specialized-Double-Unsafe.html  Blas-Specialized-Float-Safe.html  Blas-Specialized-Float-Unsafe.html  LICENSE  Makefile  README.md  Setup.hs  blas-hs.cabal  blas-hs.haddock  blas.cabal  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-N.html  doc-index-O.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-Z.html  doc-index.html  index-frames.html  index.html  (+13 more)
.github/workflows/: build.yml
src/: BlasCTypes.hs  FFI.hs
src/Blas/: Generic.in  Primitive.in  Specialized.in
src/Blas/Generic/: Safe.hs  Unsafe.hs
src/Blas/Primitive/: Safe.chs  Safe.hs  Types.chs  Types.hs  Unsafe.chs  Unsafe.hs
src/Blas/Specialized/ComplexDouble/: Safe.hs  Unsafe.hs
src/Blas/Specialized/ComplexFloat/: Safe.hs  Unsafe.hs
src/Blas/Specialized/Double/: Safe.hs  Unsafe.hs
src/Blas/Specialized/Float/: Safe.hs  Unsafe.hs
tests/: MainTest.hs  TestUtils.hs
tools/: Common.hs  Defs.hs  Mod.hs  common.rb  generate-classes  generate-ffi  generate-interface  post-process  rpp
