name:                blas-hs
version:             0.1.0.1
synopsis:            Low-level Haskell bindings to Blas.
description:         This package provides a complete low-level binding to
                     Blas via the foreign function interface, allowing Haskell
                     programs to take advantage of optimized routines for
                     vector and matrix operations in Haskell.  See the source
                     repository for more info.
homepage:            https://github.com/Rufflewind/blas-hs
bug-reports:         https://github.com/Rufflewind/blas-hs/issues
license:             MIT
license-file:        LICENSE
author:              Phil Ruffwind
maintainer:          rf@rufflewind.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/Rufflewind/blas-hs

library
  exposed-modules:     Blas.Primitive.Types
                       Blas.Primitive.Safe
                       Blas.Primitive.Unsafe
                       Blas.Generic.Safe
                       Blas.Generic.Unsafe
  other-extensions:    FlexibleInstances
                     , ForeignFunctionInterface
                     , TypeFamilies
  build-depends:       base >=4.5 && <4.8
                     , storable-complex >=0.2 && <0.3
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell98

  -- Use the following flags if you want `blas-hs` to be directly linked
  -- against an existing Blas implementation (e.g. ACML, OpenBLAS, MKL).  This
  -- will relieve the `blas-hs` user of the responsibility of specifying the
  -- flags for linking to the Blas implementation.
  --
  -- The flags have no effect on the static version of `blas-hs`.
  extra-libraries:
  ld-options:
