name:                blas-hs
version:             0.1.1.0
synopsis:            Low-level Haskell bindings to Blas.
description:         This package provides a complete low-level binding to
                     Blas via the foreign function interface, allowing Haskell
                     programs to take advantage of optimized routines for
                     vector and matrix operations in Haskell.  See the source
                     repository for more info.
homepage:            https://github.com/Rufflewind/blas-hs
bug-reports:         https://github.com/Rufflewind/blas-hs/issues
license:             MIT
license-file:        LICENSE
author:              Phil Ruffwind
maintainer:          rf@rufflewind.com
category:            Math
build-type:          Simple
cabal-version:       >=1.8
                     -- *** 1.8 --- 1.14 === 1.21 ---

source-repository head
  type:                git
  location:            https://github.com/Rufflewind/blas-hs


library
  exposed-modules:     Blas.Primitive.Types
                       Blas.Primitive.Safe
                       Blas.Primitive.Unsafe
                       Blas.Generic.Safe
                       Blas.Generic.Unsafe
                       Blas.Specialized.Float.Safe
                       Blas.Specialized.Double.Safe
                       Blas.Specialized.ComplexFloat.Safe
                       Blas.Specialized.ComplexDouble.Safe
                       Blas.Specialized.Float.Unsafe
                       Blas.Specialized.Double.Unsafe
                       Blas.Specialized.ComplexFloat.Unsafe
                       Blas.Specialized.ComplexDouble.Unsafe
  other-modules:       BlasCTypes
                       FFI
  other-extensions:    FlexibleInstances
                     , ForeignFunctionInterface
                     , TypeFamilies
  build-depends:       base >=4.5 && <5
                       -- tested: 4.5 [hard] to 4.8 [soft]
                       -- (4.4 does not export constructors for CFloat et al)
                     , storable-complex >=0.2 && <1
                       -- tested: 0.2 [hard] to 0.3 [soft]
                       -- (0.1 is buggy)
  ghc-options:         -Wall
  hs-source-dirs:      src

  -- Use the following flags if you want `blas-hs` to be directly linked
  -- against an existing Blas implementation (e.g. ACML, OpenBLAS, MKL).  This
  -- will relieve the `blas-hs` user of the responsibility of specifying the
  -- flags for linking to the Blas implementation.
  --
  -- The flags have no effect on the static version of `blas-hs`.
  --
  -- Note: If these flags are specified and a shared library is built, omit
  --       the corresponding flags in the test-suite (see below).
  extra-libraries:
  ld-options:

test-suite test
  hs-source-dirs:      tests
  type:                exitcode-stdio-1.0
  main-is:             MainTest.hs
  other-extensions:    Rank2Types
  other-modules:       TestUtils
  build-depends:       base
                     , blas-hs

                     , vector >=0.8 && <1
                       -- *** 0.8 === 0.11 ---
                       -- 0.7 has a different definition of MVector

  -- Note: Omit these flags if they are specified by the library and a shared
  --       library is built (see above).
  extra-libraries:     blas
  ld-options:
