name:                blas-hs
version:             0.1.0.0
synopsis:            Low-level bindings to Blas.
description:         Low-level bindings to Blas.
homepage:            https://github.com/Rufflewind/blas-hs
license:             MIT
license-file:        LICENSE
author:              Phil Ruffwind
maintainer:          rf@rufflewind.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Blas.Primitive.Types
                       Blas.Primitive.Safe
                       Blas.Primitive.Unsafe
                       Blas.Generic.Safe
                       Blas.Generic.Unsafe
  -- other-modules:
  other-extensions:    FlexibleInstances
                     , ForeignFunctionInterface
                     , TypeFamilies
  build-depends:       base >=4.5 && <4.8
                     , storable-complex >=0.2 && <0.3
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell98
  extra-libraries:     blas
  build-tools:         c2hs
